--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'iconfont';  /* project id 455175 */
+  src: url('//at.alicdn.com/t/font_455175_fza4yuhfbc5wmi.eot');
+  src: url('//at.alicdn.com/t/font_455175_fza4yuhfbc5wmi.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_455175_fza4yuhfbc5wmi.woff') format('woff'),
+  url('//at.alicdn.com/t/font_455175_fza4yuhfbc5wmi.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_455175_fza4yuhfbc5wmi.svg#iconfont') format('svg');
+}
 .iconfont{
   font-family:"iconfont" !important;
   font-size:16px;font-style:normal;
@@ -266,6 +274,87 @@ body{
 .section-3{
   background: url(../images/bg-3.jpg) center center no-repeat;
   background-size: cover;
+  .product{
+    position: relative;
+    .product-l{
+      padding: 0;
+      overflow: hidden;
+      .product-item{
+        padding: 143px 85px 0 85px;
+        text-align: left;
+        .product-item-brand{
+          height: 36px;
+          line-height: 36px;
+          margin-bottom: 20px;
+        }
+        h2{
+          font-size: 30px;
+          color: #fff;
+        }
+        h3{
+          font-size: 20px;
+          color: #fff;
+        }
+        .product-item-feature{
+          margin-top: 50px;
+          p{
+            font-size: 16px;
+            color: #fff;
+          }
+        }
+      }
+    }
+    .product-item{
+      height: 540px;
+      line-height: 540px;
+      text-align: center;
+      &.product-item-1{
+        background: url(../images/product-bg-1.jpg) center center no-repeat;
+      }
+      &.product-item-2{
+        background: url(../images/product-bg-2.jpg) center center no-repeat;
+      }
+      &.product-item-3{
+        background: url(../images/product-bg-3.jpg) center center no-repeat;
+      }
+    }
+    .product-r{
+      height: 540px;
+      line-height: 540px;
+      text-align: center;
+      background: url(../images/product-bg.jpg) center center no-repeat;
+      padding: 0;
+      .product-pic-item{
+        display: none;
+      }
+    }
+    .arrow{
+      width: 55px;
+      height: 55px;
+      background: rgba(0,0,0,.5);
+      text-align: center;
+      cursor: pointer;
+      .iconfont{
+        line-height: 55px;
+        font-size: 28px;
+        color: #fff;
+        font-weight: bold;
+      }
+      &.next{
+        position: absolute;
+        bottom: 0;
+        right: -15px;
+      }
+      &.prev{
+        position: absolute;
+        bottom: 0;
+        right: 41px;
+      }
+      &:hover{
+        background: #222;
+      }
+    }
+  }
 }
 .section-4{
   background: url(../images/bg-4.jpg) center center no-repeat;
@@ -356,6 +445,69 @@ body{
 .section-5{
   background: url(../images/bg-5.jpg) center center no-repeat;
   background-size: cover;
+  .contact{
+    margin-top: 130px;
+    .contact-l{
+
+    }
+    .contact-r{
+
+    }
+    .contact-tel{
+      color: #ff5252;
+      font-size: 45px;
+      line-height: 60px;
+      margin-bottom: 40px;
+      .iconfont{
+        font-size: 55px;
+        margin-right: 10px;
+      }
+    }
+    .contact-list{
+      margin-left: 70px;
+      ul{
+        padding-left: 0;
+        li{
+          list-style: none;
+          font-size: 15px;
+          line-height: 36px;
+          color: #fff;
+          .iconfont{
+            font-size: 20px;
+            margin-right: 10px;
+          }
+        }
+      }
+    }
+    .contact-qrcode{
+      margin-top: 40px;
+      margin-left: 70px;
+      .contact-qrcode-item{
+        float: left;
+        margin-right: 20px;
+        p{
+          text-align: center;
+          font-size: 12px;
+          line-height: 28px;
+          color: #666;
+        }
+      }
+    }
+    .contact-tips{
+      p{
+        font-size: 14px;
+        line-height: 26px;
+        margin-bottom: 0;
+        color: rgba(255,255,255,.5);
+      }
+    }
+    .contact-msg{
+      margin-top: 30px;
+      .form-group{
+        margin-bottom: 20px;
+      }
+    }
+  }
 }
 
 #fp-nav ul li {
