--- a/src/css/style.less
+++ b/src/css/style.less
@@ -423,6 +423,11 @@ body{
         opacity: 0;
       }
       .mobile-slide-1{
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        bottom: 0px;
+        right: 0px;
         img{
           animation:slide1 linear 8s infinite;
           -webkit-animation:slide1 linear 8s infinite;
@@ -430,6 +435,11 @@ body{
         }
       }
       .mobile-slide-2{
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        bottom: 0px;
+        right: 0px;
         img{
           animation:slide2 8s linear infinite;
           -webkit-animation:slide2 linear 8s infinite;
